tests/negative/StdlibConflict/Input.mjuvix
module Input;

open import Data.Bool;

end;
